--- a/articles/git.mdx
+++ b/articles/git.mdx
@@ -1,17 +1,20 @@
 ---
 title: "Git"
+publishedAt: "2021-11-20"
+updatedAt: "2021-11-21"
 description: "How to use git"
 tags: ["git", "cli", "version control"]
 author: "Morgan"
+image: "https://images.unsplash.com/photo-1618401479427-c8ef9465fbe1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2343&q=80"
 ---
 
-# Installing
-Linux: Use your package manager
-macOS: https://git-scm.com/download/mac
+## Installing
+Linux: Use your package manager  
+macOS: https://git-scm.com/download/mac  
 Windows: https://git-scm.com/download/win
 
 
-# The shell
+## The shell
 
 A very powerful way of interacting with your computer.  While there are a few
 GUI's for git, the shell interface is the most powerful and most widely used.
@@ -24,7 +27,7 @@ pwd
 ls
 ```
 
-# Making our first repository
+## Making our first repository
 
 First lets make a directory using the shell.
 ```
@@ -39,7 +42,7 @@ Now lets make it a git repository!
 git init
 ```
 
-# First commit
+## First commit
 
 Add some plain text files (.txt) to the directory any way you'd like.
 
@@ -74,7 +77,7 @@ We can view a specific commit using `git show <object>`.  The object can be a
 descriptor we found in git log (like `HEAD` or `master`), a hash, or a few
 other things.
 
-# Second commit
+## Second commit
 
 Make some changes to the text files.
 
@@ -94,7 +97,7 @@ Again we can look at each commit using `git show HASH`.
 `git show` also accepts relative references.  We can look at the commit that is
 1 before HEAD if we do `git show HEAD~1`
 
-# Git checkout
+## Git checkout
 
 We can use `git checkout <object>` to view the repository in that state.
 
@@ -110,7 +113,7 @@ more familiar with git.
 
 To get back to our latest changes type `git checkout master`.
 
-# Branches
+## Branches
 
 You should be comfortable with the previous material before this step.  If you
 simply want to version control some homework assignments, you don't need to
@@ -131,7 +134,7 @@ checkout test-branch` or `git checkout master`
 `git branch --list` shows an asterisk next to the current branch.
 
 
-# Merging
+## Merging
 
 Merging happens when two branches have diverged and you want to combine them.
 
@@ -149,6 +152,6 @@ everything you've already learned, make some commits on both of those branches.
 Running `git merge BRANCH-NAME` will attempt to apply all the changes from the
 other branch onto the current branch.
 
-## Merge conflicts
+### Merge conflicts
 
 TODO
